--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,10 +20,31 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav" ml-auto>
-              <li class="nav-item">Home</li>
-              <li class="nav-item">About</li>
-              <li class="nav-item">sign up</li>
-              <li class="nav-item">login</li>
+              <% if user_signed_in? %>
+                <li class="nav-item">
+                  Home
+                </li>
+                <li class="nav-item">
+                  Users
+                </li>
+                <li class="nav-item">
+                  Books
+                </li>
+                <li class="nav-item">
+                  <%= link_to"logout", destroy_user_session_path, method: :delete %>
+                </li>
+              <% else %>
+              <li class="nav-item">
+                Home
+                </li>
+                <li class="nav-item">About</li>
+                <li class="nav-item">
+                  <%= link_to "sign up", "/users/sign_up" %>
+                </li>
+                <li class="nav-item">
+                  <%= link_to "login", "/users/sign_in" %>
+                </li>
+              <% end %>
             </ul>
           </div>
         </div>
@@ -34,8 +55,12 @@
       <%= yield %>
     </main>
 
-    <footer class="bg-light text-center">
-      CopyRight Infratop.inc
+    <footer class="container mt-5">
+      <div class="row">
+        <div class="mx-auto">
+          <p>CopyRight Infratop.inc</p>
+        </div>
+      </div>
     </footer>
 
   </body>
