--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,8 +1,14 @@
-<h1>User info</h1>
-<%= form_with model:@user, local:true do |f| %>
-  <label for="inputName">Name</label>
-  <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-  <label for="inputImage">Image</label>
-  <%= f.attachment_field :profile_image_id, placeholder:"プロフィール画像" %>
-  <%= f.submit "Update User" %>
+<div class="container">
+  <h2>User info</h2>
+  <%= form_with model:@user, local:true do |f| %>
+    <label class="row mx-auto" for="inputName">Name</label>
+    <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
+    <label class="row mx-auto" for="inputImage">Image</label>
+    <%= f.attachment_field :profile_image, placeholder:"プロフィール画像" %>
+    <label class="row mx-auto" for="inputIntroduction">Introduction</label>
+    <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction" %>
+    <div class="row mx-auto">
+      <%= f.submit "Update User" %>
+    </div>
+</div>
 <% end %>
