--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,12 +1,24 @@
 <div class="container">
-  <div class="row-lg-4">
-    <h1>User info</h1>
-      <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format:'jpeg', fallback: "no_image.jpg" %>
-      <h3>name:<%= @user.name %></h3>
-      <h3>introduction:<%= @user.introduction %></h3>
-    <h1>New Book</h1>
-  </div>
-  <div class="row-lg-8">
-    <h1>Books</h1>
+  <div class="row">
+    <div class="col-lg-4">
+      <h2>User info</h2>
+        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format:'jpeg', fallback: "no_image.jpg" %>
+        <h4>name:<%= @user.name %></h4>
+        <h4>introduction:<%= @user.introduction %></h4>
+        <%= link_to "編集", edit_user_path %>
+
+      <h2>New Book</h2>
+      <%= form_with model:@book,local:true do |f| %>
+        <p>Title</p>
+        <%= f.text_field :title %>
+        <p>Opinion</p>
+        <%= f.text_area :body %>
+        <br>
+        <%= f.submit 'create book' %>
+      <% end %>
+    </div>
+    <div class="col-lg-8">
+      <h2>Books</h2>
+    </div>
   </div>
 </div>
