--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -20,16 +20,24 @@
     <div class="col-lg-8">
       <h2>Books</h2>
       <table class="table">
+        <thead>
+        <tr>
+          <th></th>
+          <th>Title</th>
+          <th>Opinion</th>
+        </tr>
+        </thead>
+        <tbody>
         <% @books.each do |book| %>
           <tr>
             <td>
               <%= book.user.profile_image %>
-              <%= book.user.name %>
             </td>
-            <td><%= book.title %></td>
+            <td><%= link_to "#{book.title}", book_path(book.id)  %></td>
             <td><%= book.body %></td>
           </tr>
         <% end %>
+        </tbody>
 
       </table>
     </div>
