--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,10 +1,18 @@
 <div class="container">
   <div class="row">
-    <div class="col-lg-4">
+    <div class="col-md-3">
       <h2>User info</h2>
         <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format:'jpeg', fallback: "no_image.jpg" %>
-        <h4>name:<%= @book.user.name %></h4>
-        <h4>introduction:<%= @book.user.introduction %></h4>
+        <table class="table">
+          <tr>
+            <th>name</th>
+            <th><%= @book.user.name %></th>
+          </tr>
+          <tr>
+            <th>introduction</th>
+            <th><%= @book.user.introduction %></th>
+          </tr>
+        </table>
         <%= link_to "編集", edit_user_path %>
 
       <h2>New Book</h2>
@@ -23,9 +31,9 @@
         <tr>
           <td>
             <%= @book.user.profile_image %>
-            <%= @book.user.name %>
+            <%= link_to "#{@book.user.name}", user_path(@book.user.id) %>
           </td>
-          <td><%= @book.title %></td>
+          <td><%= link_to "#{@book.title}", book_path(@book.id) %></td>
           <td><%= @book.body %></td>
         </tr>
       </table>
