--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,8 +1,21 @@
-<h1>welcome to <strong>Bookers</strong></h1>
+<p></p>
+<div class="container">
+  <div class="row">
+    <div class="mx-auto col-11 col-sm-10 col-lg-8 col-xl-6">
+      <h1>welcome to <i class="fas fa-book"></i><strong>Bookers</strong> !!</h1>
 
-<p>In Bookers,</p>
-<p>you can share and exchange your opinions, inpressions, and emotions</p>
-<p>about various books</p>
+      <p>In <i class="fas fa-book"></i><strong>Bookers</strong>,</p>
+      <p>you can share and exchange your opinions , inpressions , and emotions</p>
+      <p>about various books!</p>
 
-<%= link_to "Log in", new_user_session_path %>
-<%= link_to "Sign up", new_user_registration_path %>
+      <div class="col-11 mx-auto">
+        <%= link_to new_user_session_path do %>
+          <button type="button" class="btn btn-primary btn-sm btn-block mb-3">Log in</button>
+        <% end %>
+        <%= link_to new_user_registration_path do %>
+          <button type="button" class="btn btn-success btn-sm btn-block">Sign Up</button>
+        <% end %>
+      </div>
+    </div>
+  </div>
+</div>
