--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,7 +5,7 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-
+    <script src="https://kit.fontawesome.com/858380576c.js" crossorigin="anonymous"></script>
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
@@ -14,35 +14,51 @@
     <header>
       <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container">
-          <a href="#" class="navbar-bland">Bookers</a>
+          <a class="navbar-brand" href="#">
+            <span>Bookers</span>
+          </a>
           <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav" ml-auto>
+            <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li class="nav-item">
-                  Home
+                  <i class="fas fa-home"></i>
+                  <%= link_to "Home", user_path(current_user.id) %>
                 </li>
                 <li class="nav-item">
-                  Users
+                  <i class="fas fa-users"></i>
+                  <%= link_to "Users", users_path %>
                 </li>
                 <li class="nav-item">
-                  Books
+                  <i class="fas fa-book-open"></i>
+                  <%= link_to "Books", books_path %>
                 </li>
                 <li class="nav-item">
+                  <i class="fas fa-sign-out-alt"></i>
                   <%= link_to"logout", destroy_user_session_path, method: :delete %>
                 </li>
               <% else %>
-              <li class="nav-item">
-                Home
-                </li>
-                <li class="nav-item">About</li>
                 <li class="nav-item">
-                  <%= link_to "sign up", "/users/sign_up" %>
+                  <a class="fas fa-home nav-link text-light" href="/">
+                    Home
+                  </a>
                 </li>
                 <li class="nav-item">
-                  <%= link_to "login", "/users/sign_in" %>
+                  <a class="fas fa-link nav-link text-light" href="/">
+                    About
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="fas fa-user-plus nav-link text-light" href="/users/sign_up">
+                    sign up
+                  </a>
+                </li>
+                <li class="nav-item">
+                  <a class="fas fa-sign-in-alt nav-link text-light" href="/users/sign_in">
+                    login
+                  </a>
                 </li>
               <% end %>
             </ul>
