--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -20,12 +20,12 @@
     <div class="col-lg-8">
       <h2>Book Detail</h2>
         <table class="table">
+          <tr>
+            <th>Title</th>
+            <th>Opinion</th>
+          </tr>
           <% @books.each do |book| %>
             <tr>
-              <td>
-                <%= book.user.profile_image %>
-                <%= book.user.name %>
-              </td>
               <td><%= book.title %></td>
               <td><%= book.body %></td>
             </tr>
