--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,40 +1,18 @@
+<p></p>
 <div class="container">
   <div class="row">
-    <div class="col-md-3">
-      <h2>User info</h2>
-        <%= attachment_image_tag @user, :profile_image, :fill, 100, 100, format:'jpeg', fallback: "no_image.jpg" %>
-        <table class="table">
-          <tr>
-            <th>name</th>
-            <th><%= @book.user.name %></th>
-          </tr>
-          <tr>
-            <th>introduction</th>
-            <th><%= @book.user.introduction %></th>
-          </tr>
-        </table>
-        <%= link_to "編集", edit_user_path %>
-
-      <h2>New Book</h2>
-      <%= form_with model:@book,local:true do |f| %>
-        <p>Title</p>
-        <%= f.text_field :title %>
-        <p>Opinion</p>
-        <%= f.text_area :body %>
-        <br>
-        <%= f.submit 'create book' %>
-      <% end %>
-    </div>
-    <div class="col-lg-8">
-      <h2>Book Detail</h2>
+    <%= render '/list' %>
+    <div class="col-lg-8 offset-1">
+      <h2>Book detail</h2>
       <table class="table">
         <tr>
-          <td>
-            <%= @book.user.profile_image %>
+          <td style="width:10%">
+            <%= attachment_image_tag @book.user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
+            <br>
             <%= link_to "#{@book.user.name}", user_path(@book.user.id) %>
           </td>
-          <td><%= link_to "#{@book.title}", book_path(@book.id) %></td>
-          <td><%= @book.body %></td>
+          <td style="width:20%"><%= link_to "#{@book.title}", book_path(@book.id) %></td>
+          <td style="width:70%"><%= @book.body %></td>
         </tr>
       </table>
     </div>
