--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,20 +24,32 @@
             <ul class="navbar-nav ml-auto">
               <% if user_signed_in? %>
                 <li class="nav-item">
-                  <i class="fas fa-home"></i>
-                  <%= link_to "Home", user_path(current_user.id) %>
+                  <%= link_to user_path(current_user.id), class: 'nav-link' do %>
+                    <i class="fas fa-home text-light">
+                      Home
+                    </i>
+                  <% end %>
                 </li>
                 <li class="nav-item">
-                  <i class="fas fa-users"></i>
-                  <%= link_to "Users", users_path %>
+                  <%= link_to users_path, class: 'nav-link' do %>
+                  <i class="fas fa-users text-light">
+                    Users
+                  </i>
+                  <% end %>
                 </li>
                 <li class="nav-item">
-                  <i class="fas fa-book-open"></i>
-                  <%= link_to "Books", books_path %>
+                  <%= link_to books_path, class: 'nav-link' do %>
+                  <i class="fas fa-book-open text-light">
+                    Books
+                  </i>
+                  <% end %>
                 </li>
                 <li class="nav-item">
-                  <i class="fas fa-sign-out-alt"></i>
-                  <%= link_to"logout", destroy_user_session_path, method: :delete %>
+                  <%= link_to destroy_user_session_path, class: 'nav-link', method: :delete do %>
+                  <i class="fas fa-sign-out-alt text-light">
+                    logout
+                  </i>
+                  <% end %>
                 </li>
               <% else %>
                 <li class="nav-item">
