--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,14 +1,24 @@
+<p></p>
 <div class="container">
-  <h2>User info</h2>
-  <%= form_with model:@user, local:true do |f| %>
-    <label class="row mx-auto" for="inputName">Name</label>
-    <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前"%>
-    <label class="row mx-auto" for="inputImage">Image</label>
-    <%= f.attachment_field :profile_image, placeholder:"プロフィール画像" %>
-    <label class="row mx-auto" for="inputIntroduction">Introduction</label>
-    <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction" %>
-    <div class="row mx-auto">
-      <%= f.submit "Update User" %>
+  <div class="row">
+    <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
+    <h2>User info</h2>
+    <%= form_with model:@user, local:true do |f| %>
+      <label for="inputName">Name</label>
+      <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class:'form-control' %>
+      <br>
+      <label for="inputImage">Image</label>
+      <br>
+      <%= f.attachment_field :profile_image, placeholder:"プロフィール画像" %>
+      <br>
+      <br>
+      <label for="inputIntroduction">Introduction</label>
+      <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", class:'form-control' %>
+      <br>
+      <div class="row mx-auto">
+        <%= f.submit "Update User", class:'btn btn-secondary' %>
+      </div>
+      </div>
     </div>
 </div>
 <% end %>
