--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -6,13 +6,25 @@
       <h2>Book detail</h2>
       <table class="table">
         <tr>
-          <td style="width:10%">
+          <td>
             <%= attachment_image_tag @book.user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
             <br>
             <%= link_to "#{@book.user.name}", user_path(@book.user.id) %>
           </td>
-          <td style="width:20%"><%= link_to "#{@book.title}", book_path(@book.id) %></td>
-          <td style="width:70%"><%= @book.body %></td>
+          <td><%= link_to "#{@book.title}", book_path(@book.id) %></td>
+          <td><%= @book.body %></td>
+              <% if @user == current_user %>
+                <td>
+                <%= link_to edit_book_path do %>
+                  <button type="button" class="btn btn-success">Edit</button>
+                <% end %>
+                </td>
+                <td>
+                <%= link_to book_path(@book.id), method: :delete do %>
+                  <button type="button" class="btn btn-danger">Destroy</button>
+                <% end %>
+                </td>
+              <% end %>
         </tr>
       </table>
     </div>
