--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -58,7 +58,7 @@
                   </a>
                 </li>
                 <li class="nav-item">
-                  <a class="fas fa-link nav-link text-light" href="/">
+                  <a class="fas fa-link nav-link text-light" href="/home/about">
                     About
                   </a>
                 </li>
