--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,8 +1,7 @@
-<p></p>
 <div class="container">
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
-      <h2>Editng Book</h2>
+      <h2>Editing Book</h2>
       <%= form_with model:@book, local:true do |f| %>
         <label for="inputTitle">Title</label>
         <%= f.text_field :title, autofocus: true, id:"inputTitle", placeholder:"title", class:'form-control' %>
@@ -15,7 +14,7 @@
           <%= f.submit "Update Book", class:'btn btn-secondary' %>
         </div>
       <% end %>
-      <%= link_to "show", book_path(@book.id) %> | <%= link_to "Back", books_path %>
+      <%= link_to "Show", book_path(@book.id) %> | <%= link_to "Back", books_path %>
     </div>
   </div>
 </div>
