--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -1,4 +1,3 @@
-<p></p>
 <div class="container">
   <div class="row">
     <%= render '/list' %>
@@ -7,9 +6,11 @@
       <table class="table">
         <tr>
           <td>
+            <%= link_to user_path(@book.user.id) do %>
             <%= attachment_image_tag @book.user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
             <br>
-            <%= link_to "#{@book.user.name}", user_path(@book.user.id) %>
+            <%= @book.user.name %>
+            <% end %>
           </td>
           <td><%= link_to "#{@book.title}", book_path(@book.id) %></td>
           <td><%= @book.body %></td>
