--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,4 +1,3 @@
-<p></p>
 <div class="container">
   <div class="row">
   <%= render '/list' %>
@@ -16,7 +15,9 @@
         <% @users.each do |user| %>
           <tr>
             <td style="width:30%">
+              <%= link_to user_path(user.id) do %>
               <%= attachment_image_tag @user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
+              <% end %>
             </td>
             <td style="width:50%"><%= user.name %></td>
             <td style="width:20%"><%= link_to "Show", user_path(user.id) %></td>
