--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<p></p>
+<%= render 'layouts/notifications' %>
 <div class="container">
   <div class="row">
     <%= render '/list' %>
@@ -15,7 +15,11 @@
           <tbody>
           <% @books.each do |book| %>
             <tr>
-              <td><%= attachment_image_tag @user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %></td>
+              <td>
+                <%= link_to user_path(@user.id) do %>
+                <%= attachment_image_tag @user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
+                <% end %>
+              </td>
               <td><%= link_to "#{book.title}", book_path(book.id) %></td>
               <td><%= book.body %></td>
             </tr>
