--- a/app/views/_list.html.erb
+++ b/app/views/_list.html.erb
@@ -12,18 +12,19 @@
         <th><%= @user.introduction %></th>
       </tr>
     </table>
-      <%= link_to edit_user_path(@user.id) do %>
-        <button type="button" class="btn btn-outline-secondary btn-sm btn-block">
+    <div class="row">
+      <%= link_to(edit_user_path(@user.id), class:"btn btn-outline-secondary btn-sm btn-block") do %>
           <i class="fas fa-user-cog"></i>
-        </button>
       <% end %>
+    </div>
     <p></p>
     <h2>New book</h2>
     <%= form_with model:@book,local:true do |f| %>
-      <p>Title</p>
-      <%= f.text_field :title %>
-      <p>Opinion</p>
-      <%= f.text_area :body %>
+      <label for="bookTitle">Title</label>
+      <%= f.text_field :title, class:'form-control' %>
+      <br>
+      <label for="bookOpinion">Opinion</label>
+      <%= f.text_area :body, class:'form-control' %>
       <br>
       <%= f.submit 'Create Book', class:'btn btn-success' %>
     <% end %>
