--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,6 +2,12 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
       <h2>Editing Book</h2>
+        <% if @book.errors.any? %>
+          <h3><%= @book.errors.count %> error prohibited this obj from being saved:</h3>
+          <% @book.errors.full_messages.each do |message| %>
+            ・<%= message %><br>
+          <% end %>
+        <% end %>
       <%= form_with model:@book, local:true do |f| %>
         <label for="inputTitle">Title</label>
         <%= f.text_field :title, autofocus: true, id:"inputTitle", placeholder:"title", class:'form-control' %>
