--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -10,26 +10,26 @@
   </div>
   <div class="row">
   <%= render '/list' %>
-    <div class="col-lg-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
       <table class="table">
         <thead>
         <tr>
-          <th></th>
-          <th>Title</th>
-          <th>Opinion</th>
+          <th scope="col"></th>
+          <th scope="col">Title</th>
+          <th scope="col">Opinion</th>
         </tr>
         </thead>
         <tbody>
         <% @books.each do |book| %>
           <tr>
-            <td style="width:10%">
+            <th scope="row">
               <%= link_to user_path(book.user.id) do %>
-              <%= attachment_image_tag @user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
+              <%= attachment_image_tag book.user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
               <% end %>
-            </td>
-            <td style="width:35%"><%= link_to "#{book.title}", book_path(book.id)  %></td>
-            <td style="width:55%"><%= book.body %></td>
+            </th>
+            <td><%= link_to "#{book.title}", book_path(book.id)  %></td>
+            <td><%= book.body %></td>
           </tr>
         <% end %>
         </tbody>
