--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -9,12 +9,8 @@
       <p>about various books!</p>
 
       <div class="col-11 mx-auto">
-        <%= link_to new_user_session_path do %>
-          <button type="button" class="btn btn-primary btn-sm btn-block mb-3">Log in</button>
-        <% end %>
-        <%= link_to new_user_registration_path do %>
-          <button type="button" class="btn btn-success btn-sm btn-block">Sign Up</button>
-        <% end %>
+        <%= link_to "Log in", new_user_session_path, class:"btn btn-primary btn-sm btn-block mb-3"%>
+        <%= link_to "Sign Up", new_user_registration_path, class:"btn btn-success btn-sm btn-block" %>
       </div>
     </div>
   </div>
