--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,6 +2,13 @@
   <div class="row">
     <div class="col-sm-12 col-md-8 col-lg-5 px-5 px-sm-0 mx-auto">
     <h2>User info</h2>
+    <% if @user.errors.any? %>
+      <h3><%= @user.errors.count %> error prohibited this obj from being saved:</h3>
+      <% @user.errors.full_messages.each do |message| %>
+        ・<%= message %><br>
+      <% end %>
+    <% end %>
+    <br>
     <%= form_with model:@user, local:true do |f| %>
       <label for="inputName">Name</label>
       <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"名前", class:'form-control' %>
