--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container">
   <div class="row">
   <%= render '/list' %>
-    <div class="col-lg-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h2>Users</h2>
       <table class="table">
         <thead>
@@ -16,7 +16,7 @@
           <tr>
             <td style="width:30%">
               <%= link_to user_path(user.id) do %>
-              <%= attachment_image_tag @user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
+              <%= attachment_image_tag user, :profile_image, size:"40x40", format:'jpeg', fallback: "no_image.jpg" %>
               <% end %>
             </td>
             <td style="width:50%"><%= user.name %></td>
