--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,12 @@
-<%= render 'layouts/notifications' %>
+<% if flash[:notice] %>
+    <div class="flash">
+         <%= flash[:notice] %>
+    </div>
+<% end %>
 <div class="container">
   <div class="row">
     <%= render '/list' %>
-    <div class="col-lg-8 offset-1">
+    <div class="col-md-8 offset-md-1">
       <h2>Books</h2>
         <table class="table table-hover text-left">
           <thead>
